TypedLama/regression/compile_error/test005.4.lama
-- wrong return type: expected Int -> Int, but function implementation returns just bare Int
local double = fun (x) :: Int -> Int {
  2*x
};